modified code and new files addes

--- a/achievers/Account.html
+++ b/achievers/Account.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AchieversIT Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>account</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="Account.html">My Account</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">My Account</a></li>
                 <li><a href="#">Compare</a></li>
-                <li><a href="form.html">Login</a></li>   
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
         <div class="searchbar">
-            <input type="text" placeholder="Search for items...">
+            <input type="text" placeholder="Search For Items...">
             <i class="fa fa-search"></i>
         </div>
         <div class="icons">
@@ -30,6 +30,23 @@
             <i class="fa-solid fa-bag-shopping"></i>
         </div>
     </header>
+    <div class="main">
+        <aside class="sidebar">
+            <ul>
+                <li><a href="#"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+                <li><a href="#"><i class="fa fa-box"></i> Orders</a></li>
+                <li><a href="#"><i class="fa fa-user"></i> Update Profile</a></li>
+                <li><a href="#"><i class="fa fa-map-marker"></i> My Address</a></li>
+                <li><a href="#"><i class="fa fa-lock"></i> Change Password</a></li>
+                <li><a href="#"><i class="fa fa-sign-out-alt"></i> Logout</a></li>
+            </ul>
+        </aside>
+
+        <div class="content">
+            <h2>Hello Rosie</h2>
+            <p>From your account dashboard, you can easily check & view your recent order, manage your shipping and billing addresses and edit your password and account details.</p>
+        </div>
+    </div>
     <section class="newsletter">
         <div>
             <i class="fa fa-envelope"></i>
@@ -40,6 +57,7 @@
             <button>Subscribe</button>
         </div>
     </section>
+
     <footer>
         <div class="footer-top">
             <div class="contact">
@@ -79,5 +97,6 @@
         </div>
         <p>© 2025 Shalu. All right reserved</p>
     </footer>
+
 </body>
 </html>
