--- a/achievers/form.html
+++ b/achievers/form.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AchieversIT Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login/Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="Account.html">My Account</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">My Account</a></li>
                 <li><a href="#">Compare</a></li>
-                <li><a href="form.html">Login</a></li>   
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
         <div class="searchbar">
-            <input type="text" placeholder="Search for items...">
+            <input type="text" placeholder="Search For Items...">
             <i class="fa fa-search"></i>
         </div>
         <div class="icons">
@@ -30,6 +30,31 @@
             <i class="fa-solid fa-bag-shopping"></i>
         </div>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="login-form">
+                <h2>Login</h2>
+                <form>
+                    <input type="email" placeholder="Your Email" required>
+                    <input type="password" placeholder="Your Password" required>
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+
+            <div class="register-form">
+                <h2>Create an Account</h2>
+                <form>
+                    <input type="text" placeholder="Username" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <input type="password" placeholder="Your Password" required>
+                    <input type="password" placeholder="Confirm Password" required>
+                    <button type="submit">Submit & Register</button>
+                </form>
+            </div>
+        </div>
+    </main>
+
     <section class="newsletter">
         <div>
             <i class="fa fa-envelope"></i>
@@ -40,6 +65,7 @@
             <button>Subscribe</button>
         </div>
     </section>
+
     <footer>
         <div class="footer-top">
             <div class="contact">
