--- a/achievers/shop.html
+++ b/achievers/shop.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AchieversIT Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>shopping</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="Account.html">My Account</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">My Account</a></li>
                 <li><a href="#">Compare</a></li>
-                <li><a href="form.html">Login</a></li>   
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
         <div class="searchbar">
-            <input type="text" placeholder="Search for items...">
+            <input type="text" placeholder="Search For Items...">
             <i class="fa fa-search"></i>
         </div>
         <div class="icons">
@@ -40,6 +40,7 @@
             <button>Subscribe</button>
         </div>
     </section>
+
     <footer>
         <div class="footer-top">
             <div class="contact">
