new file compare.html

--- a/achievers/compare.html
+++ b/achievers/compare.html
@@ -37,9 +37,9 @@
                 <thead>
                     <tr>
                         <th>Image</th>
-                        <th><img src="../project/assets/product-2-1.jpg" alt=""></th>
-                        <th><img src="../project/assets/product-4-1.jpg" alt=""></th>
-                        <th><img src="../project/assets/product-7-1.jpg" alt=""></th>
+                        <th><img src="../assets/product-2-1.jpg" alt=""></th>
+                        <th><img src="../assets/product-4-1.jpg" alt=""></th>
+                        <th><img src="../assets/product-7-1.jpg" alt=""></th>
                     </tr>
                 </thead>
                 <tbody>
