--- a/achievers/index.html
+++ b/achievers/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="Account.html">My Account</a></li>
-                <li><a href="#">Compare</a></li>
+                <li><a href="compare.html">Compare</a></li>
                 <li><a href="form.html">Login</a></li>   
             </ul>
         </nav>
