achievers/page2.html

--- a/achievers/page2.html
+++ b/achievers/page2.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="shop-top">
-            <p>We found <span>688</span>items for you!</p>
+            <p>We found <span>400</span>items for you!</p>
         </div>
         <section class="products">
             <div class="products-cards">
@@ -248,11 +248,10 @@
                 </div>
             </div>
         </section>
-    
             <div class="pagination">
                 <a href="#">01</a>
-                <a href="page2.html">02</a>
-                <a href="page3.html">03</a>
+                <a href="#">02</a>
+                <a href="#">03</a>
                 <span>...</span>
                 <a href="#">16</a>
             </div>
