--- a/achievers/page3.html
+++ b/achievers/page3.html
@@ -17,8 +17,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">My Account</a></li>
-                <li><a href="#">Compare</a></li>
-                <li><a href="#">Login</a></li>   
+                <li><a href="">Compare</a></li>
+                <li><a href="">Login</a></li>   
             </ul>
         </nav>
         <div class="searchbar">
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="shop-top">
-            <p>We found <span>688</span>items for you!</p>
+            <p>We found <span>400</span>items for you!</p>
         </div>
         <section class="products">
             <div class="products-cards">
@@ -248,11 +248,10 @@
                 </div>
             </div>
         </section>
-    
             <div class="pagination">
                 <a href="#">01</a>
-                <a href="page2.html">02</a>
-                <a href="page3.html">03</a>
+                <a href="#">02</a>
+                <a href="#">03</a>
                 <span>...</span>
                 <a href="#">16</a>
             </div>
