--- a/achievers/compare.html
+++ b/achievers/compare.html
@@ -14,20 +14,26 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">My Account</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="Account.html">My Account</a></li>
                 <li><a href="#">Compare</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="form.html">Login</a></li>
             </ul>
         </nav>
         <div class="searchbar">
-            <input type="text" placeholder="Search For Items...">
+            <input type="text" placeholder="Search for items...">
             <i class="fa fa-search"></i>
         </div>
         <div class="icons">
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-bag-shopping"></i>
+            <div class="icon-container">
+                <i class="fa-regular fa-heart"></i>
+                <div class="notification"> 3 </div>
+            </div>
+            <div class="icon-container">
+                <i class="fa-solid fa-bag-shopping"></i>
+                <div class="notification">3</div>
+            </div>
         </div>
     </header>
 
