--- a/achievers/Account.html
+++ b/achievers/Account.html
@@ -49,7 +49,7 @@
         </aside>
 
         <div class="content">
-            <h2>Hello Rosie</h2>
+            <h2>Hello Shalini</h2>
             <p>From your account dashboard, you can easily check & view your recent order, manage your shipping and billing addresses and edit your password and account details.</p>
         </div>
     </div>
